Pushing code for Lending club case study

--- a/Manasi_Pawar.ipynb
+++ b/Manasi_Pawar.ipynb
@@ -4236,7 +4236,7 @@
    "id": "9a6aae50",
    "metadata": {},
    "source": [
-    "<b>Decisive Factor whether an applicant will be Repayer:</b>\n",
+    "<b>Decisive Factor whether an applicant will be defaulter:</b>\n",
     "* Annual_income: Annual income below 150000 have more defaults. \n",
     "* Verification status: Source verification has less defaults than not verified and verified.\n",
     "* Housing status with Rent is having more defaults. \n"
